[project]
name = "seanode"
version = "0.1.0"
description = "Extract STOFS and related model data at station locations."
authors = [
    {name = "Jack Reeves Eyre",email = "jack.reeveseyre@noaa.gov"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "bottleneck (>=1.4.2,<2.0.0)",
    "cfgrib (>=0.9.15.0,<0.10.0.0)",
    "cftime (>=1.6.4.post1,<2.0.0)",
    "coastalmodeling-vdatum @ git+ssh://git@github.com/oceanmodeling/coastalmodeling-vdatum",
    "dask (>=2025.4.1,<2026.0.0)",
    "fsspec (>=2025.3.2,<2026.0.0)",
    "h5netcdf (>=1.6.1,<2.0.0)",
    "iris (>=1.0.7,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "numbagg (>=0.9.0,<0.10.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydap (>=3.5.5,<4.0.0)",
    "s3fs (>=2025.3.2,<2026.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "xarray (>=2025.4.0,<2026.0.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "zarr (>=3.0.8,<4.0.0)",
    "kerchunk (>=0.2.8,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
